Complete Rewrite using Sanic

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
-venv
 __pycache__
 .pytest_cache
-.vscode
-.vagrant
+logs
+TEMP
+temp.*
+
+venv38
+venv39
+venv310
+venv311
+
+wslvenv38
+wslvenv39
+wslvenv310
+wslvenv311
