--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,26 @@
+venv38
+venv39
+venv310
+venv311
+
+wslvenv38
+wslvenv39
+wslvenv310
+wslvenv311
+
 __pycache__
-venv
 .vscode
 .pytest_cache
+
 *.bat
-misc
-.github
+*.sh
+
 .git
+.github
+
+.vagrant
+
+*.ico
+!favicon.ico
+
+TEMP
